AMPS-693 all products get the same jvmArgs defaults handling